# cpp-cmake-conan-template

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  requirements.txt
cmake/: CompileOptions.cmake  ConanConfig.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake
lib/: CMakeLists.txt
lib/md5_helpers/: CMakeLists.txt
lib/md5_helpers/include/md5_helpers/: utils.h
lib/md5_helpers/src/: utils.cpp
src/: CMakeLists.txt  md5.cpp
